# GBFR-TOOL

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  build-windows-x64.cmd
Hashfolder/: GBFR-Character-Sections.txt  GBFR-Section-Names.txt  GameData-Section-Cross-Reference.csv
resources/: GBFRTool.rc  GBFRTool.rc.in
src/: CharacterSections.cpp  CharacterSections.hpp  DataFilePaths.cpp  DataFilePaths.hpp  GameDataCore.cpp  GameDataCore.hpp  HashDatabase.cpp  HashDatabase.hpp  LogicalFamilies.cpp  LogicalFamilies.hpp  RelationshipMap.cpp  RelationshipMap.hpp  SectionNames.cpp  SectionNames.hpp  ValueDecoder.cpp  ValueDecoder.hpp  WeaponRules.cpp  WeaponRules.hpp  cli_main.cpp  version.hpp  win32_main.cpp
tests/: core_tests.cpp
